2014-08-20  Sebastian Mendel  <sebastian.mendel@netresearch.de>

	* Incorporate performance tweaks from @Jalle19
	* Release 0.4.0

2014-06-11  Andre Hähnel  <andre.haehnel@netresearch.de>

	* Optional exceptions for missing or undefined data
	* Release 0.3.0

2014-05-16  Christian Weiske  <christian.weiske@netresearch.de>

	* Handle NULL values when mapping simple data types onto objects
	* Release 0.2.1

2014-05-15  Christian Weiske  <christian.weiske@netresearch.de>

	* Add support for mapping simple data types onto objects
	* Fix tests on phpunit 4.x
	* Release version 0.2.0

2014-03-17  Christian Weiske  <christian.weiske@netresearch.de>

	* Prevent autoloading classes with ] in its name
	* Release version 0.1.3

2014-02-03  Christian Weiske  <christian.weiske@netresearch.de>

	* Fix issue #2: Namespace is prepended two times
	* Fix issue #1: Remove declare(encoding="UTF-8") calls
	* Release version 0.1.2