@@ -1,3 +1,7 @@
+2014-10-20  Alessio Vertemati  <a.vertemati@sirisacademic.com>
+
+	* Made a little check for the existence of ReflectionClass::getNamespaceName() so the library could be used with php 5.2
+
 2014-08-20  Sebastian Mendel  <sebastian.mendel@netresearch.de>
 
 	* Incorporate performance tweaks from @Jalle19
